--- a/public/css/pages/dashboard.css
+++ b/public/css/pages/dashboard.css
@@ -65,7 +65,8 @@
 /* Grid */
 .dash {
     flex: 1;
-    min-height: 85vh;
+    min-height: 0;
+    height: calc(100vh - var(--navbar-height, 70px) - 3rem);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
